# openChat

./: .gitignore  .gitmodules  AGENTS.md  ANDROID-SIGNING.md  CLAUDE.md  Directory.Build.props  LICENSE  OpenChat.Desktop.slnf  OpenChat.sln  README.md  Scramble.Desktop.slnf  Scramble.sln  bot-npub.txt  docker-compose.test.yml  global.json  nuget.config
ai-tasks/: TESTING_GUIDELINES.md  add-error-resilience-tests.md  add-message-service-tests.md  amber-phase1-nip44-giftwrap.md  amber-phase2-mls-event-signing.md  amber-phase3-cleanup-tests.md  android-feature-parity.md  android-google-play-readiness.md  android-production-ready.md  android-share-target.md  android-ui-polish.md  auto-download-media-cache.md  auto-keypackage-lookup.md  blockcore-nostr-client.md  bot-message-timestamp-sorting.md  bug-amber-profile-not-found.md  bug-group-invite-not-received.md  case-insensitive-participant-matching.md  csharp-mls-fixes-plan.md  dotnet-hkdf-expand-broken-linux.md  fitbit-smartwatch-support.md  fix-audio-playback-received-messages.md  fix-blossom-upload-status.md  fix-mip04-imeta-tags-in-rumor.md  fix-nostrgroupdata-tls-vs-quic.md  fix-realtime-messages-after-mls-update.md  fix-stuck-welcome-invites.md  group-admin-and-member-list.md  headless-integration-tests.md  headless-test-coverage.md  image-message-support.md  implement-shell-viewmodel.md  investigate-amber-invite-signer.md  linux-passphrase-protection.md  log-analysis-2026-05-08-mobile.md  (+48 more)
fitbit/: package.json
src/OpenChat.Native/: Cargo.toml  build.rs
src/OpenChat.Native/src/: client.rs  error.rs  group.rs  lib.rs
(+617 files in other folders)
