[package]
name = "openchat_native"
version = "0.1.0"
edition = "2021"
authors = ["OpenChat Contributors"]
description = "Native MLS/Marmot bindings for OpenChat"

[lib]
name = "openchat_native"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Marmot Development Kit - MLS + Nostr (from GitHub, not yet on crates.io)
mdk-core = { git = "https://github.com/marmot-protocol/mdk", branch = "master" }
mdk-memory-storage = { git = "https://github.com/marmot-protocol/mdk", branch = "master" }

# Nostr types (use same version as MDK)
nostr = "0.44"

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
rand = "0.8"
hex = "0.4"

# Thread-safe lazy initialization
once_cell = "1.18"
parking_lot = "0.12"

# Logging
tracing = "0.1"

[build-dependencies]
csbindgen = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
